git-debimport python-defaults_2.7.8-1.tar.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,137 @@
-python-defaults (2.7.3-4+deb7u1) stable; urgency=low
+python-defaults (2.7.8-1) unstable; urgency=medium
 
-  * Add symlink for /usr/bin/python2 (Closes: #723182)
-    - This was inadvertently omitted during Wheezy development, but is already
-      fixed in jessie (the fix proposed here is identical)
+  [ Barry Warsaw ]
+  * Fix typo in policy doc re: wheel package exception list.
+  * Add myself to Uploaders.
 
- -- Scott Kitterman <scott@kitterman.com>  Sat, 28 Sep 2013 15:30:14 -0400
+  [ Scott Kitterman ]
+  * Fix error in pydist package relationship regex (Closes: #735163)
+    - Thanks to Rafael Laboissiere for the patch
+  * Switch from using lsb-release to dpkg-vendor to determine distro and drop
+    lsb-release from build-depends (Closes: #751706)
+    - Thanks to Peter Pentchev for the patch
+  * Drop unused build-depends on libhtml-tree-perl
+  * Clarify discussion of requirement to use python:Provides (Closes: #669346)
+  * Add clarification of naming requirements for submocules (Closes: #701192)
+  * Minor cleanups in debian/pyversions.py
+  * Stop automatically regenerating static content (dh_python2 man pages and
+    Python FAQ) and drop build-dep on python-docutils to ease bootstrapping
+    (Closes: #754060)
+    - Add direct build-dep on python-all to replace indirect build-dep
+  * Bump version to 2.7.8
+  * Drop ancient Breaks on python-csv, python-bz2, and python-email
+
+ -- Scott Kitterman <scott@kitterman.com>  Fri, 11 Jul 2014 17:10:37 -0400
+
+python-defaults (2.7.6-2) unstable; urgency=medium
+
+  [ Barry Warsaw ]
+  * Add python policy for Python Wheels.
+
+ -- Scott Kitterman <scott@kitterman.com>  Wed, 21 May 2014 00:04:16 -0400
+
+python-defaults (2.7.6-1) unstable; urgency=medium
+
+  * Bump version to 2.7.6.
+  * dh_python2: no longer move files to /usr/share/pyshared, don't create
+    /usr/lib/pyshared symlinks for extensions.
+  * Use UTF-8 encoding for the python policy in HTML format. Closes: #689931.
+  * Add a chapter for the python policy to prefer Python 3 over Python 2.
+
+ -- Matthias Klose <doko@debian.org>  Mon, 12 May 2014 12:16:34 +0200
+
+python-defaults (2.7.5-5) unstable; urgency=low
+
+  [ Steve Langasek ]
+  * Adjust debpython/depends.py to be multiarch-friendly.
+
+  [ Piotr Ożarowski ]
+  * Set "Multi-Arch: allowed" in python, python-dev, python-minimal,
+    python-dbg, python-all, python-all-dev, python-all-dbg
+  * Replace /usr/bin/dh_python2 with a Python script that invokes
+    dh-python's dh_python2 if Build-Depends{,-Indep} contains dh-python
+
+ -- Piotr Ożarowski <piotr@debian.org>  Thu, 12 Sep 2013 21:25:01 +0200
+
+python-defaults (2.7.5-4) unstable; urgency=low
+
+  * Add libpython-all-dbg.postinst to convert the doc directory to a symlink
+    on upgrade (Closes: #718736)
+
+ -- Scott Kitterman <scott@kitterman.com>  Tue, 13 Aug 2013 00:23:58 -0400
+
+python-defaults (2.7.5-3) unstable; urgency=low
+
+  [ Matthias Klose ]
+  * Fix libpython-all-dbg doc dir symlink. Closes: #712270.
+
+  [ Piotr Ożarowski ]
+  * Replace /usr/bin/dh_python2 with a shell script that invokes
+    dh-python's dh_python2 if debian/control mentions dh-python
+  * dh_python2: warnings about --install-layout=deb and translating
+    dependencies are just an info now
+
+ -- Piotr Ożarowski <piotr@debian.org>  Fri, 02 Aug 2013 08:54:32 +0200
+
+python-defaults (2.7.5-2) unstable; urgency=low
+
+  * Add dependencies on the new libpython-{stdlib,all-dev,all-dbg} packages.
+
+ -- Matthias Klose <doko@debian.org>  Thu, 13 Jun 2013 15:07:18 +0200
+
+python-defaults (2.7.5-1) unstable; urgency=low
+
+  [ Matthias Klose ]
+  * Bump version to 2.7.5.
+  * Drop python2.6 as a supported python version.
+  * Bump standards version to 3.9.4.
+  * Start building the libpython-stdlib, libpython-all-dev, libpython-all-dbg
+    packages.
+  * Drop Python 2.6 as a supported Python version.
+  * Fix some lintian warnings.
+
+  [ Scott Kitterman ]
+  * When X(S)-Python-Version or debian/pyversions is not present, do not
+    describe them as missing, just indicate they are not there
+
+ -- Matthias Klose <doko@debian.org>  Thu, 06 Jun 2013 14:57:03 +0200
+
+python-defaults (2.7.3-13) experimental; urgency=low
+
+  * Always build the policy files.
+
+ -- Matthias Klose <doko@debian.org>  Thu, 28 Feb 2013 16:46:08 +0100
+
+python-defaults (2.7.3-12) experimental; urgency=low
+
+  * Move python-docutils to build-depends (from build-depends-indep).
+
+ -- Matthias Klose <doko@debian.org>  Thu, 28 Feb 2013 15:58:09 +0100
+
+python-defaults (2.7.3-11) experimental; urgency=low
+
+  * Add Multi-Arch: same packages libpython-all-{dev,dbg} (not yet built,
+    python2.6 doesn't have support for multiarch).
+  * python-dbg: Stop providing python-gdbm-dbg, python-tk-dbg. Closes: #700716.
+  * Add a libpython-stdlib package (not yet built).
+
+ -- Matthias Klose <doko@debian.org>  Thu, 28 Feb 2013 14:43:06 +0100
+
+python-defaults (2.7.3-10) experimental; urgency=low
+
+  * Build dependency packages as architecture dependent packages.
+  * Make python, python-{minimal,dev,dbg} Multi-Arch: allowed.
+  * Build Multi-Arch: any packages libpython-{dev,dbg} packages providing
+    $(DEB_HOST_GNU_TYPE/DEB_HOST_MULTIARCH)-python-config symlinks.
+  * Provide python2 symlinks.
+
+ -- Matthias Klose <doko@debian.org>  Wed, 12 Dec 2012 00:25:00 +0100
+
+python-defaults (2.7.3-5) unstable; urgency=low
+
+  * Drop Python 2.6 as a supported Python version.
+
+ -- Matthias Klose <doko@debian.org>  Mon, 06 May 2013 02:48:48 +0200
 
 python-defaults (2.7.3-4) unstable; urgency=low
 
